2009-06-05  Esteban Sanchez  <estebans@artica.es>

	* godmode/setup/inventories_setup.php: Added to repository. Editor
	for inventory extra fields.

	* include/functions_inventories.php: Added config variable to
	get_inventory_generic_labels() scope.

	* operation/side_menu.php: Added link to inventory extra fields
	editor.

2009-06-04  Esteban Sanchez  <estebans@artica.es>

	* integria_db.sql: Added tinventory_reports.

	* extras/inventory_importer.php: Added support to read from stdin.
	Avoid empty names. Get id inventory based on name and parent.
	Generic fields can receive the name of other field to get its value
	before updating.

	* include/functions_db.php: Added support to allow selecting what kind
	of result type to be fetched. Added process_sql_delete().

	* include/functions_inventories.php: Added
	get_inventory_generic_labels ().

	* inventories/inventory_detail.php: Fixed error messages.

	* inventories/inventory_extra.php: Added to repository. Extra fields
	for inventory objects.

	* inventories/inventory_reports.php: Added to repository. Inventory
	reports from a SQL sentence.

	* inventories/inventory_reports_detail.php: Added to repository.
	Inventory reports editor.

	* operation/side_menu.php: Added link to inventory reports.

	* operation/inventories/inventory.php: Added link for extra fields tab.

2009-06-02  Esteban Sanchez  <estebans@artica.es>

	* integria_db.sql: Added more extra fields to tinventory.

	* extras/inventory_importer.php: Added new fields for tinventory.
	Avoid warning message on fopen(). Removed extra parameters on 
	process_sql_insert()

2009-06-02  Esteban Sanchez  <estebans@artica.es>

	* integria_db.sql: Added extra fields to tinventory.

	* include/functions_ui.php,
	extras/inventory_importer.php: Added to repository.

	* include/functions_db.php: Added extra functions to manage database
	queries.

	* include/styles/integria.css: Style correction.

2009-05-28  Sancho lerena <slerena@artica.es>
